--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-   <div>
-       哈哈哈哈
-   </div>
-    <div>yangxiong</div>
+    <script src="./plugins/jquery-1.12.2.min.js"></script>
 </body>
 </html>
