--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,85 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/module.css">
 </head>
+
 <body>
+    <div class="main">
+        <!-- 左边内容star -->
+        <div class="main_left">
+            <!-- 左边第一块内容 star-->
+            <div class="main_Left_First d-flex  align-items-center">
+                <!-- 图标左边 -->
+                <div class="logo_left ">
+                    <img src="./image/icon/companyimg.png">
+                </div>
+                <!-- 图标右边 -->
+                <div class="logo_right  ml-15  d-flex flex-column justify-content-between ">
+                    <div class="font-18 color-fff">北京移动</div>
+                    <div class="w-135 mt-6 d-flex flex-justify-content align-items-center ">
+                        <div class="font-14 color-fff">股份有限公司</div>
+                        <div class="round ml-10"></div>
+                        <div class="font-14 color-fff  ml-5 ">正常</div>
+                    </div>
+                    <div class="d-flex justify-content-between w-100 mt-6">
+                        <div class="d-flex justify-content-between ">
+                            <div class="smallLogo">
+                                <img src="./image/icon/tel.png">
+                            </div>
+                            <div class="smallLogo ml-15">
+                                <img src="./image/icon/letter.png">
+                            </div>
+                        </div>
+                        <div class="mr-18">
+                            <img src="./image/icon/.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 左边第一块内容 end-->
+            <!-- 左边第二块内容 star-->
+            <div class="main_Left_Second">
+                <div class="leftTopTitle">
+                    <div>洞察</div>
+                    <div class="circle">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
+                <div class="type mt-10 d-flex ml-20">
+                    <ul class="d-flex flex-warp tagUl">
+                        <li class="tagLi addition font-18 mt-10 mr-10">+</li>
+                    </ul>
+                </div>
+
+            </div>
+            <!-- 左边第二块内容 end-->
+            <!-- 左边第三块内容 star-->
+            <div class="main_Left_Third">
+                <div class="leftTopTitle">
+                    <div>价值</div>
+                    <div class="circle">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </div>
+                <div></div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <div class="main_right"></div>
+    </div>
     <script src="./plugins/jquery-1.12.2.min.js"></script>
+    <script src="./js/index1.js"></script>
 </body>
+
 </html>
