--- a/index.html
+++ b/index.html
@@ -73,7 +73,20 @@
                         <div></div>
                     </div>
                 </div>
-                <div></div>
+                <div class="left_Body">
+                        <ul class="d-flex ml-20">
+                            <li>邮务</li>
+                            <li>邮储</li>
+                            <li>速递物流</li>
+                            <li>保险</li>
+                            <li>证券</li>
+                        </ul>
+                    
+                    <div class="stars"></div>
+                    <div class="rank"></div>
+                    <div class="score"></div>
+                    <div class="property"></div>
+                </div>
             </div>
         </div>
 
