--- a/index.html
+++ b/index.html
@@ -73,18 +73,35 @@
                         <div></div>
                     </div>
                 </div>
-                <div class="left_Body">
-                        <ul class="d-flex ml-20">
-                            <li>邮务</li>
-                            <li>邮储</li>
-                            <li>速递物流</li>
-                            <li>保险</li>
-                            <li>证券</li>
-                        </ul>
-                    
-                    <div class="stars"></div>
-                    <div class="rank"></div>
-                    <div class="score"></div>
+                <div class="left_Body ">
+                    <ul class="d-flex ml-20">
+                        <li>邮务</li>
+                        <li>邮储</li>
+                        <li>速递物流</li>
+                        <li>保险</li>
+                        <li>证券</li>
+                    </ul>
+                    <div class="stars">
+                        <img src="./image/icon/stars.png" alt="">
+                    </div>
+
+                    <div class="score d-flex justify-content-between  ">
+                        <div class="one">
+                            <div class="d-flex  text-alian">
+                                <div>32</div>
+                                <div>分</div>
+                            </div>
+                            <p>现有价值</p>
+                        </div>
+                        
+                        <div class="two">
+                            <div class="d-flex ">
+                                <div>15</div>
+                                <div>分</div>
+                            </div>
+                            <p>潜在价值</p>
+                        </div>
+                    </div>
                     <div class="property"></div>
                 </div>
             </div>
