--- a/index.html
+++ b/index.html
@@ -84,25 +84,10 @@
                     <div class="stars">
                         <img src="./image/icon/stars.png" alt="">
                     </div>
-
-                    <div class="score d-flex justify-content-between  ">
-                        <div class="one">
-                            <div class="d-flex  text-alian">
-                                <div>32</div>
-                                <div>分</div>
-                            </div>
-                            <p>现有价值</p>
-                        </div>
-                        
-                        <div class="two">
-                            <div class="d-flex ">
-                                <div>15</div>
-                                <div>分</div>
-                            </div>
-                            <p>潜在价值</p>
-                        </div>
+                    <div class="red d-flex  ">
+                        <div class="green_one">1</div>
+                        <div class="green_two">2</div>
                     </div>
-                    <div class="property"></div>
                 </div>
             </div>
         </div>
