--- a/index.html
+++ b/index.html
@@ -85,8 +85,16 @@
                         <img src="./image/icon/stars.png" alt="">
                     </div>
                     <div class="red d-flex  ">
-                        <div class="green_one">1</div>
-                        <div class="green_two">2</div>
+                        <div class="green_one d-flex flex-justify-content align-items-center ">
+                            <div class="d-flex flex-justify-content align-items-center flex-warp ">
+                                <div>
+                                    <span>32</span>
+                                    <span>分</span>
+                                </div>
+                                <p>现在价值</p>
+                            </div>
+                        </div>
+                        <div class="green_two d-flex flex-justify-content align-items-center">2</div>
                     </div>
                 </div>
             </div>
